fix header title white space

--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -48,6 +48,7 @@
 
   h1 {
     font-weight: 600;
+    white-space: nowrap;
 
     @include desktop {
       font-size: 28px;
